fix header jumps

--- a/src/app/features/header/header.component.scss
+++ b/src/app/features/header/header.component.scss
@@ -1,4 +1,5 @@
 .header {
+  width: 100%;
   height: 80px;
   padding: 0 50px 0 0;
   display: flex;
@@ -9,7 +10,8 @@
   font-weight: bold;
   line-height: 30px;
   transition: all 0.5s;
-  position: relative;
+  position: absolute;
+  top: 0;
   z-index: 1;
 
   &.fixed {
