--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -1,5 +1,6 @@
 .home {
   min-height: 1000px;
+  padding-top: 80px;
   background-image: url("../../../assets/images/home-bg.png");
 
   &::after {
